--- a/practice.html
+++ b/practice.html
@@ -111,7 +111,7 @@
         <div class="container">
             <!-- Email header -->
             <div class="row">
-                <div class="col email-address">To: support@gmail.com<br>From: ben@webapp.com<br>
+                <div class="col email-address">To: mwalker@tmail.com<br>From: noreply@stockx.com<br>
                 </div>    
             </div>
 
@@ -134,7 +134,7 @@
             </div>
             
             <!-- Email content -->
-            <div class="row email-content mt-5">
+            <div class="row mt-5">
                 <div class="col">
                     For the next 24 hours, there's more money back for sellers and better pricing for buyers. Every item sold will automatically recieve 50% off their fees.* Restrictions apply, click <a href="">here</a> for full details.
                 </div>
